; ModuleID = '/home/carl/AnghaBench/vlc/lib/extr_error.c_libvlc_threads_deinit.c'
source_filename = "/home/carl/AnghaBench/vlc/lib/extr_error.c_libvlc_threads_deinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@lock = common dso_local global i32 0, align 4
@refs = common dso_local global i64 0, align 8
@context = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @libvlc_threads_deinit() #0 {
  %1 = call i32 @vlc_mutex_lock(i32* @lock)
  %2 = load i64, i64* @refs, align 8
  %3 = icmp sgt i64 %2, 0
  %4 = zext i1 %3 to i32
  %5 = call i32 @assert(i32 %4)
  %6 = load i64, i64* @refs, align 8
  %7 = add nsw i64 %6, -1
  store i64 %7, i64* @refs, align 8
  %8 = icmp eq i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %0
  %10 = call i32 (...) @free_error()
  %11 = call i32 @vlc_threadvar_delete(i32* @context)
  br label %12

12:                                               ; preds = %9, %0
  %13 = call i32 @vlc_mutex_unlock(i32* @lock)
  ret void
}

declare dso_local i32 @vlc_mutex_lock(i32*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @free_error(...) #1

declare dso_local i32 @vlc_threadvar_delete(i32*) #1

declare dso_local i32 @vlc_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
